@startuml ThietKeChiTiet_QuanLyHoSo
title Thiết kế chi tiết gói Quản lý Hồ sơ Ứng viên

' Quy ước quan hệ (UML):
'   ..>   Dependency   (phụ thuộc)
'   --    Association  (kết hợp)
'   o--   Aggregation  (kết tập)
'   *--   Composition  (hợp thành)
'   --|>  Inheritance  (kế thừa)
'   ..|>  Implementation (thực thi)

skinparam classBackgroundColor #FFFFCC
skinparam classBorderColor black
skinparam backgroundColor #FEFECE
skinparam ArrowColor black
skinparam shadowing false

' ===== BOUNDARY (Giao diện) =====
class "ResumePage" <<boundary>> {}

' ===== CONTROL (Xử lý logic) =====
class "config/api.ts" as ApiR <<control>> {}
class "ResumeController" <<control>> {}
class "ResumeService" <<control>> {}
class "ResumeRepository" <<control>> {}

' ===== ENTITY (Dữ liệu) =====
class "Resume" <<entity>> {}
class "User" <<entity>> {}
class "Job" <<entity>> {}

' ===== Luồng chính =====
"ResumePage" ..> ApiR : callFetchResume / callUpdateResumeStatus / callDeleteResume
ApiR ..> "ResumeController" : <<HTTP REST / JSON>>
"ResumeController" ..> "ResumeService" : uses
"ResumeService" ..> "ResumeRepository" : uses
"ResumeRepository" ..> "Resume" : truy vấn (JPA)

' ===== Quan hệ giữa các thực thể (JPA) =====
"Resume" "*" -- "1" "User" : của ứng viên
"Resume" "*" -- "1" "Job" : ứng tuyển vào

@enduml
